--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -20,8 +20,8 @@
     <%= f.text_area :misc %>
   </div>
   <div class="field">
-    <%= f.label :eleve_id %><br />
-    <%= f.number_field :eleve_id %>
+    <%= f.label :student_id %><br />
+    <%= f.number_field :student_id %>
   </div>
   <div class="field">
     <%= f.label :controle_id %><br />
