--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -4,7 +4,7 @@
   <tr>
     <th>Note</th>
     <th>Misc</th>
-    <th>Eleve</th>
+    <th>Student</th>
     <th>Controle</th>
     <th></th>
     <th></th>
@@ -15,7 +15,7 @@
   <tr>
     <td><%= note.note %></td>
     <td><%= note.misc %></td>
-    <td><%= note.eleve_id %></td>
+    <td><%= note.student_id %></td>
     <td><%= note.controle_id %></td>
     <td><%= link_to 'Show', note %></td>
     <td><%= link_to 'Edit', edit_note_path(note) %></td>
