--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@elefe) do |f| %>
-  <% if @elefe.errors.any? %>
+<%= form_for(@student) do |f| %>
+  <% if @student.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@elefe.errors.count, "error") %> prohibited this elefe from being saved:</h2>
+      <h2><%= pluralize(@student.errors.count, "error") %> prohibited this student from being saved:</h2>
 
       <ul>
-      <% @elefe.errors.full_messages.each do |msg| %>
+      <% @student.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
