--- a/app/views/controles/show.html.erb
+++ b/app/views/controles/show.html.erb
@@ -1,13 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Date:</b>
-  <%= @controle.date %>
-</p>
-
-<p>
-  <b>Matiere:</b>
-  <%= @controle.matiere_id %>
+  <b>Name:</b>
+  <%= @controle.name %>
 </p>
 
 <p>
@@ -18,6 +13,16 @@
 <p>
   <b>Description:</b>
   <%= @controle.description %>
+</p>
+
+<p>
+  <b>Matiere:</b>
+  <%= @controle.matiere_id %>
+</p>
+
+<p>
+  <b>Date:</b>
+  <%= @controle.date %>
 </p>
 
 
