--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -21,11 +21,11 @@
   </div>
   <div class="field">
     <%= f.label :student_id %><br />
-    <%= f.number_field :student_id %>
+    <%= f.select :student_id, Student.find(:all , :order => "firstName, lastName").collect {|s| [(s.firstName + " " + s.lastName), s.id]} %>
   </div>
   <div class="field">
     <%= f.label :controle_id %><br />
-    <%= f.number_field :controle_id %>
+    <%= f.select :controle_id, Controle.find(:all , :order => "name").collect {|s| [(s.matiere.name + " : " + s.name ), s.id]} %>
   </div>
   <div class="actions">
     <%= f.submit %>
