--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -23,10 +23,17 @@
     <%= f.label :student_id %><br />
     <%= f.select :student_id, Student.find(:all , :order => "firstName, lastName").collect {|s| [(s.firstName + " " + s.lastName), s.id]} %>
   </div>
+
+  <% unless params[:controle] %>
   <div class="field">
     <%= f.label :controle_id %><br />
-    <%= f.select :controle_id, Controle.find(:all , :order => "name").collect {|s| [(s.matiere.name + " : " + s.name ), s.id]} %>
+    <%= f.select :controle_id, Controle.find(:all , :order => "name").collect {|s| [(s.matiere.name + " : " + s.name ), s.id]} %>   
   </div>
+  <% else %>
+  <%= f.hidden_field :controle_id, :value => params[:controle] %>
+  <% end %>
+
+
   <div class="actions">
     <%= f.submit %>
   </div>
