--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -5,6 +5,7 @@
     <th>Note</th>
     <th>Misc</th>
     <th>Student</th>
+    <th>Matiere</th>
     <th>Controle</th>
     <th></th>
     <th></th>
@@ -15,8 +16,9 @@
   <tr>
     <td><%= note.note %></td>
     <td><%= note.misc %></td>
-    <td><%= note.student_id %></td>
-    <td><%= note.controle_id %></td>
+    <td><%= note.student.full_name %></td>
+    <td><%= note.matiere.name %></td>
+    <td><%= note.controle.name %></td>
     <td><%= link_to 'Show', note %></td>
     <td><%= link_to 'Edit', edit_note_path(note) %></td>
     <td><%= link_to 'Destroy', note, method: :delete, data: { confirm: 'Are you sure?' } %></td>
