--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -29,7 +29,7 @@
   </div>
   <div class="field">
     <%= f.label :gender %><br />
-    <%= f.text_field :gender %>
+    <%= f.select :gender, Student.genders  %>
   </div>
   <div class="actions">
     <%= f.submit %>
