--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :birth %><br />
-    <%= f.datetime_select :birth %>
+    <%= f.date_select :birth, :start_year => Time.now.year - 30, :end_year => Time.now.year  %>
   </div>
   <div class="field">
     <%= f.label :addr %><br />
