--- a/app/views/controles/new.html.erb
+++ b/app/views/controles/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New controle</h1>
+<h1>New controle <%= " : " + Matiere.find_by_id(params[:matiere]).name if params[:matiere] %> </h1>
 
 <%= render 'form' %>
 
