some button changes
Signed-off-by: Nicolas Dechesne <n-dechesne@ti.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<%= nav_bar :fixed => :top, :brand => "iNote" do %>
+<%= nav_bar :fixed => :top, :brand => "iNote" , :responsive => true do %>
     <% menu_group  do %>
         <%= menu_item "Eleves", students_path %>
         <%= menu_item "Controles", controles_path %>
