--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,6 +1,6 @@
 
-<div class="page-header"
-<h1>Liste des Eleves</h1>
+<div class="page-header">
+     <h1>Liste des Eleves</h1>
 </div>
 
 <table class="table table-striped table-bordered table-hover">
@@ -23,16 +23,17 @@
     <td><%= student.gender %></td>
     <td>
       <div class="btn-group">
-        <button class="btn"><%= link_to 'Show', student %></button>
-        <button class="btn"><%= link_to 'Edit', edit_student_path(student) %></button>
-        <button class="btn"><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></button>
-      </div>
+        <%= link_to 'Show', student, :class => "btn btn-info btn-mini" %></button>
+        <%= link_to 'Edit', edit_student_path(student), :class => "btn  btn-info btn-mini" %></button>
+        <%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-danger btn-mini" %></button>
+</div>
     </td>
 
   </tr>
 <% end %>
 </tbody>
 </table>
+
 
 <br />
 
