--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,22 +6,16 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
+
 <body>
+    <%= render 'layouts/header' %>
+    <div class="container">
+      <%= yield %>
+      <%= render 'layouts/footer' %>
+    </div>
+    
+    <%#= debug(params) if Rails.env.development? %>
 
-<%= nav_bar :fixed => :top, :brand => "iNote" , :responsive => true do %>
-    <% menu_group  do %>
-        <%= menu_item "Eleves", students_path %>
-        <%= menu_item "Controles", controles_path %>
-        <%= menu_item "Matieres", matieres_path %>
-        <%= menu_item "Notes", notes_path %>
-    <% end %>
-<% end %>
+  </body>
 
-
-<%= yield %>
-
-
-<%= debug(params) if Rails.env.development? %>
-
-</body>
 </html>
