--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,6 +7,7 @@
     <ul>
       <li><%= link_to "About",   about_path %></li>
       <li><%= mail_to "nictam@gmail.com", "Contact" %></li>
-    </ul>
+      <li><%= link_to "Help",    help_path %></li>
+  </ul>
   </nav>
 </footer>
