--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,7 @@
       <nav>
         <ul class="nav pull-right">
           <% if signed_in? %>
+
           <li id="fat-menu" class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <%= current_user.name %> <b class="caret"></b>
@@ -18,6 +19,24 @@
                 </li>
             </ul>
           </li>
+
+          <li id="fat-menu" class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Classes <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <% current_user.active_classrooms.each do |classroom| %>
+              <li><%= link_to classroom.name, classroom %></li>
+              <% end %>
+              <% unless current_user.active_classrooms.size == 0 %>
+              <li class="divider"></li>
+              <% end %>
+                <li>
+                  <%= link_to "Nouvelle classe", new_classroom_path %>
+                </li>
+            </ul>
+          </li>
+
           <% else %>
           <li><%= link_to "Sign in", signin_path %></li>
           <% end %>
