--- a/app/views/classrooms/new.html.erb
+++ b/app/views/classrooms/new.html.erb
@@ -1,5 +1,2 @@
-<h1>New classroom</h1>
-
-<%= render 'form' %>
-
+<%= render 'form' , :legend => 'Creer une nouvelle classe' %>
 <%= link_to 'Back', classrooms_path %>
