--- a/app/views/classrooms/edit.html.erb
+++ b/app/views/classrooms/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing classroom</h1>
 
-<%= render 'form' %>
+<%= render 'form' , :legend => 'Modifier une classe' %>
 
 <%= link_to 'Show', @classroom %> |
 <%= link_to 'Back', classrooms_path %>
