--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-inner">
     <div class="container">
-      <%= link_to "iNotes", root_path, :class => "brand" %>
+      <%= link_to "iNotesEverywhere", root_path, :class => "brand" %>
       <nav>
         <ul class="nav pull-right">
           <% if signed_in? %>
@@ -22,7 +22,7 @@
 
           <li id="fat-menu" class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              Classes <b class="caret"></b>
+              Mes Classes <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
               <% current_user.active_classrooms.each do |classroom| %>
