--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,26 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<div class="page-header">
+     <h1>Bienvenue sur iNotesEverywhere</h1>
+</div>
+
+<p class="lead">
+  Sur ce site, vous pouvez gerer vos classes, vos eleves et l'ensemble 
+  des notes.
+</p>
+
+<p class="lead">
+  Vous avez deja un compte chez nous?
+  <%= link_to "Connectez-vous", signin_path, :class => "btn btn-primary" %>
+</p>
+
+<p class="lead">
+  C'est votre premiere visite?
+  <%= link_to "Inscrivez-vous, c'est gratuit!", signup_path, :class => "btn btn-success" %>
+</p>
+
+
+
+
+
+
+
+
