--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -25,6 +25,13 @@
   <%= @student.gender %>
 </p>
 
+<p>
+  <b>Classes:</b>
+  <% @student.classrooms.each do |classroom| %>
+  <%= classroom.name %>
+  <% end %>
+</p>
+
 
 <%= link_to 'Edit', edit_student_path(@student) %> |
 <%= link_to 'Back', students_path %>
